# Aether

./: .env.example  .gitignore  Cargo.toml  Dockerfile.app  Dockerfile.app.local  Makefile  README.md  dev.sh  docker-compose.build.yml  docker-compose.yml  install.sh
.github/workflows/: build-proxy.yml  deploy-pages.yml  docker-publish.yml  release.yml  rust-ci.yml
apps/aether-gateway/: Cargo.toml  build.rs
apps/aether-gateway/examples/: execution_runtime_harness.rs  tunnel_runtime_harness.rs
apps/aether-gateway/src/: admin_api.rs  client_session_affinity.rs  headers.rs  lib.rs  main.rs  provider_key_auth.rs  rate_limit.rs  request_candidate_runtime.rs  (+1 more)
apps/aether-proxy/: Cargo.toml  README.md  install.ps1  install.sh
crates/aether-data/: Cargo.toml  README.md
crates/aether-data-contracts/: Cargo.toml
crates/aether-data-schema/: README.md
crates/aether-plugin-core/: Cargo.toml
crates/aether-plugin-core/src/: lib.rs
crates/aether-provider-plugin/: Cargo.toml
crates/aether-provider-plugin/src/: lib.rs
crates/aether-provider-transport/: Cargo.toml
crates/aether-task-runtime/: Cargo.toml
crates/aether-testkit/: Cargo.toml
deploy/: docker-compose.data.yml
docs/architecture/: data-schema-inventory.md
frontend/: vite.config.ts
frontend/src/: App.vue  main.ts
src/core/: provider_oauth_utils.py
src/models/: endpoint_models.py
tests/api/: test_provider_oauth_batch_import.py  test_python_host_shell.py
tests/core/: test_provider_oauth_utils_codex.py
tests/unit/: test_codex_websocket_config.py  test_provider_oauth_import_parser.py
(+873 files in other folders)
