[package]
name = "aether-plugin-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Generic plugin manifest, registry, runtime, and hook contracts for Aether"

[dependencies]
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
toml = "0.8"

